--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>gir intro</title>
+    <title>git intro</title>
 </head>
 <body>
     This is the body
+
+    <hr>
+    this is a new line
     
 </body>
 </html>
